feat(agents): update agent configurations and honeypot tools
- Enhance agent core logic with improved fallback handling
- Update tool implementations for fake credentials, logging, and query patterns
- Refine agent.yaml configuration for better orchestration

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -5,14 +5,14 @@ agents:
   real:
     name: "processor-001"
     prompt_file: "prompts/real-agent.md"
-    model: "us.anthropic.claude-sonnet-4-20250514"
+    model: "amazon.nova-pro-v1:0"
     tools: []
     description: "Legitimate data processor"
 
   honeypot_db_admin:
     name: "db-admin-001"
     prompt_file: "prompts/honeypot-db-admin.md"
-    model: "us.anthropic.claude-sonnet-4-20250514"
+    model: "amazon.nova-pro-v1:0"
     tools:
       - log_interaction
       - fake_credential
@@ -22,7 +22,7 @@ agents:
   honeypot_privileged:
     name: "privileged-proc-001"
     prompt_file: "prompts/honeypot-privileged.md"
-    model: "us.anthropic.claude-sonnet-4-20250514"
+    model: "amazon.nova-pro-v1:0"
     tools:
       - log_interaction
       - query_patterns
