--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -54,6 +53,7 @@ logs/fingerprints.jsonl
 
 # macOS
 .DS_Store
+.venv/
 
 # Node (frontend)
 node_modules/
@@ -65,3 +65,4 @@ dist/
 *.key
 credentials.json
 docs/SETUP-CREDENTIALS.md
+
