chore(env): update .env.example for improved clarity and organization
- Revised the structure and comments in the .env.example file for better readability.
- Clarified the purpose of each environment variable, including Auth0, AWS, and third-party integrations.
- Ensured consistent naming conventions for variables and added documentation references for setup.

--- a/.env.example
+++ b/.env.example
@@ -1,65 +1,60 @@
-# HoneyAgent Environment Variables
-# Copy to .env and fill in values
+# =============================================================================
+# HoneyAgent Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your actual credentials
+# NEVER commit .env to git (it's in .gitignore)
+#
+# =============================================================================
 
-# ============================================================
-# AUTH0 CONFIGURATION
-# ============================================================
-
-# Auth0 domain (without https://)
+# -----------------------------------------------------------------------------
+# Auth0 Configuration
+# -----------------------------------------------------------------------------
+# Your Auth0 tenant domain
 AUTH0_DOMAIN=your-tenant.us.auth0.com
 
-# API audience (must match what's configured in Auth0)
+# API identifier for your HoneyAgent application
 AUTH0_AUDIENCE=https://honeyagent-swarm.api
 
-# Real agent M2M app credentials
-AUTH0_REAL_CLIENT_ID=your_real_client_id
-AUTH0_REAL_CLIENT_SECRET=your_real_client_secret
+# Real agent M2M credentials (legitimate agents use these)
+AUTH0_REAL_CLIENT_ID=your-real-client-id
+AUTH0_REAL_CLIENT_SECRET=your-real-client-secret
 
-# Honeypot agent M2M app credentials
-AUTH0_HONEYPOT_CLIENT_ID=your_honeypot_client_id
-AUTH0_HONEYPOT_CLIENT_SECRET=your_honeypot_client_secret
+# Honeypot agent M2M credentials (fake agents use these)
+AUTH0_HONEYPOT_CLIENT_ID=your-honeypot-client-id
+AUTH0_HONEYPOT_CLIENT_SECRET=your-honeypot-client-secret
 
-# FGA configuration
-AUTH0_FGA_STORE_ID=your_fga_store_id
+# Auth0 Fine Grained Authorization (FGA) configuration
+AUTH0_FGA_STORE_ID=your-fga-store-id
+AUTH0_FGA_CLIENT_ID=your-fga-client-id
+AUTH0_FGA_CLIENT_SECRET=your-fga-client-secret
 AUTH0_FGA_API_URL=https://api.us1.fga.dev
-AUTH0_FGA_API_TOKEN=your_fga_api_token
 
-# ============================================================
-# AWS CONFIGURATION
-# ============================================================
-
-# AWS region
+# -----------------------------------------------------------------------------
+# AWS Configuration
+# -----------------------------------------------------------------------------
+# AWS credentials for accessing Bedrock, S3, and other services
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=us-east-1
 
-# AWS credentials (or use IAM role)
-AWS_ACCESS_KEY_ID=your_access_key_id
-AWS_SECRET_ACCESS_KEY=your_secret_access_key
-
-# S3 Vectors bucket name
+# S3 bucket for storing attacker fingerprints and vector data
 S3_VECTORS_BUCKET=honeyagent-fingerprints
 
-# Bedrock model ID
-BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-20250514
+# Bedrock Knowledge Base ID for threat intelligence queries
+HONEYAGENT_KB_ID=your-knowledge-base-id
 
-# ============================================================
-# APPLICATION CONFIGURATION
-# ============================================================
+# -----------------------------------------------------------------------------
+# Third-Party Integrations (Optional)
+# -----------------------------------------------------------------------------
+# Tonic Fabricate - for generating synthetic data
+TONIC_API_KEY=your-tonic-api-key
+# Alternative env var name (either works)
+FABRICATE_API_KEY=your-fabricate-api-key
+# Fabricate API URL (optional, defaults to production)
+FABRICATE_API_URL=https://fabricate.tonic.ai/api/v1
 
-# Environment: development | production
-ENVIRONMENT=development
+# TinyFish/AgentQL - for web scraping and browser automation
+TINYFISH_API_KEY=your-tinyfish-api-key
 
-# Log level: DEBUG | INFO | WARNING | ERROR
-LOG_LEVEL=INFO
-
-# Local fallback log file (used when S3 Vectors unavailable)
-LOCAL_LOG_FILE=logs/fingerprints.jsonl
-
-# ============================================================
-# DEMO CONFIGURATION
-# ============================================================
-
-# Enable demo mode (use fallbacks more aggressively)
-DEMO_MODE=true
-
-# Demo: simulate network latency (ms)
-DEMO_LATENCY=0
+# Freepik - for generating visual honeytokens
+FREEPIK_API_KEY=your-freepik-api-key
