refactor(agents): update agent tool names for clarity
- Renamed 'pattern_extractor' to 'extract_attacker_patterns' for better understanding of its function.
- Maintained 'visual_honeytoken' in both agent configurations for consistency.
- Adjusted comments to reflect the new naming conventions.

--- a/config/agents.yaml
+++ b/config/agents.yaml
@@ -17,9 +17,8 @@ agents:
       - log_interaction
       - fake_credential
       - semantic_match
-      - pattern_extractor      # TinyFish AgentQL
-      - fabricate_credential   # Tonic Fabricate
-      - visual_honeytoken      # Freepik visual assets
+      - extract_attacker_patterns      # TinyFish AgentQL
+      - visual_honeytoken              # Freepik visual assets
     description: "High-value target honeypot (database admin)"
     trap_profile: "high-value-target"
 
@@ -31,8 +30,8 @@ agents:
       - log_interaction
       - query_patterns
       - semantic_match
-      - pattern_extractor      # TinyFish AgentQL
-      - visual_honeytoken      # Freepik visual assets
+      - extract_attacker_patterns      # TinyFish AgentQL
+      - visual_honeytoken              # Freepik visual assets
     description: "Privileged processor honeypot"
     trap_profile: "elevated-access"
 
